examples/typechecking/trait_propagation.an

bar: a = extern bar

trait Baz a with baz: fn a -> Unit

foo () = baz bar

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (bar: a) = extern "bar"
// 
// type Baz a [env] =
//     baz: fn a [[env]] -> Unit
// 
// (foo: fn Unit -> _) () = (baz: (error)) (bar: _)

// expected stderr:
// examples/typechecking/trait_propagation.an:6:10
// 6 | foo () = baz bar	// error: `baz` not found in scope
//   |          ^^^
// 
// Found 1 error and 0 warnings
